--- a/addon/templates/components/notification-message.hbs
+++ b/addon/templates/components/notification-message.hbs
@@ -9,8 +9,8 @@
   {{else}}
     {{notification.message}}
   {{/if}}
-  <div local-class="c-notification__close" {{action "removeNotification"}} title="Dismiss this notification">
-    <i class="{{closeIcon}}"></i>
+  <div local-class="c-notification__close" title="Dismiss this notification">
+    <i data-is-remove-button class="{{closeIcon}}"></i>
   </div>
 </div>
 {{#if notification.autoClear}}
